@@ -102,9 +102,9 @@ void unlock_frontbuffer() {
 palette::palette(unsigned char* palette_data) {
     SDL_Color* pal = new SDL_Color[256];
     for (int i = 0; i < 256; i++) {
-        pal[i].r = palette_data[3 * i] << 2;
-        pal[i].g = palette_data[3 * i + 1] << 2;
-        pal[i].b = palette_data[3 * i + 2] << 2;
+        pal[i].r = palette_data[3 * i];
+        pal[i].g = palette_data[3 * i + 1];
+        pal[i].b = palette_data[3 * i + 2];
         pal[i].a = 0xFF;
     }
     data = (void*)pal;
